--- a/style.css
+++ b/style.css
@@ -1,19 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-body {
-  background-color: lightblue;
-}
+/* A gradient with a single color of red */
+/*radial-gradient(red)*/
 
-.completed {
-  text-decoration: line-through;
-  color: gray;
-  border: 1px solid gray;
-}
-</style>
-</head>
-<body> 
+/* A gradient at the center of its container,
+   starting red, changing to blue, and finishing green */
+radial-gradient(circle at center, red 25%, blue 35%, green 0)
 
-</body>
-</html>
+/* hsl color space with longer hue interpolation */
+/* radial-gradient(circle at center in hsl longer hue, red 0, blue, green 100%)*/
+
